# ChangeLog for sci-electronics/pulseview
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-electronics/pulseview/ChangeLog,v 1.1 2014/06/14 07:02:49 vapier Exp $

*pulseview-9999 (14 Jun 2014)
*pulseview-0.2.0 (14 Jun 2014)

  14 Jun 2014; Mike Frysinger <vapier@gentoo.org> +metadata.xml,
  +pulseview-0.2.0.ebuild, +pulseview-9999.ebuild:
  Initial ebuild based on work by Christopher Friedt & Cody Schafer #426586.