@@ -2,24 +2,26 @@
 Hash: SHA256
 
 DIST pulseview-0.2.0.tar.gz 148799 SHA256 feb5d33a0a91c989bfc39fa758195755e78e87c3cf445bb135a8c8d4f86bc1dd SHA512 f770510ceade6382de2d09ba7819a9b39623f3ccbbb4a3a64bb0a64f774d356583f6ad2812a845978d1eaf50dcbfd4688ceec3005d0b712a087d1f686d3c0301 WHIRLPOOL 31068fcebd4286d325db37327c351e8cbd00e095901c04a3d034c127b1272e7c463400a91683cbb64a775b86f5cf61411f1f809e7b4dcd76113ceeb63990eaa2
-EBUILD pulseview-0.2.0.ebuild 1126 SHA256 2c6cf0aca2b89902b0fe16e39248d7d50faf714bdb5e8092fb6c2846844ac617 SHA512 842abec16c5b4b0877c0e9f1ff18fcaaf05e43b7bb618b3c0bd7a425bcbf222bf4c50991f392875f07c850428163ddbfac37af607e7a9a152af350565ce42d65 WHIRLPOOL 0f6ec000d8bdfcfc12246c31ba59f9911df56a49e6f33dca1e57b25d791e0b6bc2805ca088638e7e23cd15bfe832ede516b728d511bc6c5ae4485b57da92ad6f
-EBUILD pulseview-9999.ebuild 1125 SHA256 d9c9e84cdb258db2cb8f393e782f856897778d17e00adcd9e1fc295a2ad40e42 SHA512 f0a4f7b7454561fd41283e3a88feb239d882266570c5126bd8f2fa83f1f829f6c42aa942ff6363817d0f9aa48c7732fa991b9c60703eeb16f5c624847b0d1eb6 WHIRLPOOL ab2e3878d9bed9b73ec6c7dfabdc4a0bd70a6a46a449104061733ae5c64fde789072bb09fbe69610a3951fcd1c6e80dd1b31e8dc4d0a9f94c64198a773e6450b
-MISC ChangeLog 478 SHA256 53822f1a2ce462996fb79d936ef12e98d1a237b04b0e808bf53c9adda733632b SHA512 2f5b20457878a83c9d69cfb36bd2561a983cdbdc07781309d99cdaca102c8d613c82e4a973d063df57f1faaafa2d5db268569e8920e3773618c4200e6b70db55 WHIRLPOOL 946c08b3cdbc2ed09a4eb44ba32eab755a7a68874442d517fad0f84fd31d0f19fdd4a50502bf68de189345835884dee3680de7ace20f87ad39b2b0b8ccce286d
+EBUILD pulseview-0.2.0.ebuild 1124 SHA256 be155ad6f99b089677633c9f879dc0ff7f61284ac72836be6d9cc0c0a8f85f99 SHA512 87f78016ad47f0ce98883b0ba645edcf6fe5872941d568f2ab663abb307821d36242126cae4e52420f6692e3ea7139c0518bd91c0f65276ac4ad8161cc631f22 WHIRLPOOL 4895d255702030ec62e20ac56858ec70d4dc3d8d0d8ded015edef69040bdffb19c41cdc01e1188de16c15d9d33846f49b4a640d188bba9760aca6d1afb5fe964
+EBUILD pulseview-9999.ebuild 1123 SHA256 5ab457f379825d6c7784d5c7052e3b099f2fedd1abc766fd8034f756ae25b1e2 SHA512 942d1ad46e8466ca03db559d47b9c4dd7c4f7797758e407808b85ec748ec67dacdd51483aec89fb6b364912cd184d692d85467b9313f3c7c24b78f7173de1358 WHIRLPOOL 5193a942698592ed7a8b470a890284179a10b6ee3f754551ad0a6b242bc03805daa60bb406a0aed9e28cc3537a09af3146b60ac0adbee9f5f62f8ffb05155962
+MISC ChangeLog 612 SHA256 34a1acd02acbcd88954bd33cea4f98d95384bc9cb8447e824143812bba8280e4 SHA512 a2783a2152b2c5173e9bd0425bc0bd69a82d8351b249fecf4666b390ffa99a3804c221b0fcd8aeb8c21502f1c1a2c604f200db3eb210d70ae383ad84d40cb9a9 WHIRLPOOL 2b25a0919f97d579f0072a91f8239770e9287a1297e4a29190b6a03e381a8a1d2bc4850b2204b0cfa87edb6246c25f06bf92e15649f7a5afd5ff5a4114bb0b3c
 MISC metadata.xml 251 SHA256 99294108cd03281517a1a87e0ad62a4640440c36d11a6230ea51e5c545dfa271 SHA512 96a6975fa8e1a530fc5c296ef685d48b1f4ef5671ecc4ceb85b52752b7d36f3de4b60c98e9211c4ee20dcbadb159b37ea74d57f135dd61872c44427f813982f7 WHIRLPOOL e4409c93479cd092ddaebb2e18869a644ef4266ecd3a9d0ef1201ce6fc36cf1b75978f2c8819c053a2a45af906ed4841588a7f30d93d72810337561adc214ff2
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJTm/OiAAoJEPGu1DbS6WIA7xEP/RKAee2EUCGnAQGQyE+sMl1m
-TcZUsOS4y8BVdjUAIpk1Uv1S2mjv6ZsJp2P2J6Lpuff7r7vBx8SwNK3oNN1nOYU+
-vJlMwbNW2/m/tqQG/DQnzOEeAdJ+HL0GKLQHeGbaNEA8v5oJP4ugMJ0OOq9huijk
-QYrUsMKLOADLKGIzT0ncKfWHopczTzrq6WX6xyi0jTv60rbkJ7QJqSnZ1q6OqTHY
-dbeXDIWEC9GIc+2AKPxPJEHs0VWfd11EEgrF+OO7sjpFo7Sur4jsLH+GNtuH88Xq
-66Sd4dAweDpKajKp13ICIsfuo48eTIJUbw6oE64HFzLM/O2j/1/nFnKu34tisUjr
-D42ag3+HgO0LHFy1WL/4m7W+/DcOzcZvEFhdXTFRdQpFveTqPHB1tELvvgR0eG9i
-l5xeDPjfNFZRSpMNjBAq75w29m7TgP/6hiTQAhkBXGGMpgvQD0Gr0vwgE+VpM6eL
-SPLJ5hiycS6NOqTutFrkPFY7fcdvWum+FZr8q8NLFV8PPS7JrWtuO9tR2QorL+ml
-Zem3zsU1LhJ1QfAk2/Vczk50R34MV4E/AxflgFqLJop/IeObXnGus9R4oCVmuQ5J
-9IbNnR9eeMeMd2roChmA5nAWkK7a6DPzIu8xO267EuVPBNajIGNJwNQfxfpq0aP8
-qyVmsAkZcpwrkVyQkqPD
-=Cn/+
+iQJ8BAEBCABmBQJVJXGlXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOgasQAKpMOhLSwkD0ZobUU8jA24vW
+ASJZ3/wfL68EnAjup/JqQ8rz81vV9qLcicf03YbYZV3i2BiD2VkRf+P/MxJDe3XQ
+sDgi8EL5ZRRvjm+eomVMD2YLg60lmWHJ7XWhonNs/0yxR85f6RAuBPpAZL+fErr2
+dxVn9KXBWoLWJ1HbJS2fg1F8rOuPS6iOt4kTEnfl3SaRfHNVdROPaVkQ4/pGuCyo
+tFNT7I74VhmycT1gQuP33iZvpdQfLSV2xMlszUh2zqifxKHxO8RE7+lMPtt+jVEf
+MF/XcQcDqYdXkYQKij3cAJubs1yzhSFLSwkWafApIv+BHbAWgE/NPPVtzkj6GnRP
+7Ap9Z4A5L4/reOwQ0hNV1eZF5/qG4iQvNJdfTgrU2icSsjFHb7cTxOszJqeh9yty
+2Vk1ckSfQINiC1ovg+Chh7c6vPFc9GkabCnhCFum980WeI3WDTeeqLsR0pV7MFNZ
+K/2qVdH8mg985MLKVRwtpdsyLxFCXf2DWzr7w5YmJ8oif+8R+B89TtKmIBFY+8+M
+EAXc6oP68NFWdhes5JhYllhXpfAI8dFQL75l9Fx4GUWhbn6/UVsR5yt8qf/SNtC1
+IPktHfMI6bwC0sRZ8guSpfSeSF8qPIRgm/l5MnDuufV0azwaski1rMm3fMtWfD/L
+vkFR6z/OhL0cO1RcBc1+
+=IBSS
 -----END PGP SIGNATURE-----
