@@ -2,24 +2,26 @@
 Hash: SHA256
 
 DIST sigrok-cli-0.5.0.tar.gz 390077 SHA256 73a30501525b13c09624ae00d37041cdaa50238d89c6febf169fc784affe723c SHA512 27945c8da71267b0e0e6762d646361ab23637e3187d68fba93a1306a4b01418c78d5779d885e1ad91304c3865f980e9472986215c40900ec25abe9eb5a437fde WHIRLPOOL 94a9c0c97cf9eae5b7b3b7d7157e0a38e27e74682f9f6d862a60eb3d812f5e9f951f8bf075e78f41e34bcee1b6acc0f5a10040e2c33edc6755527e492120c9fe
-EBUILD sigrok-cli-0.5.0.ebuild 1125 SHA256 16b95b8141e5573b69d972f6eb23ff65659bef0137f10fe7154541de23dfae71 SHA512 7f060efbf50a67533be0a1a7cc19e7253093c7020e45867c3c1941c3d27080546dd692712364dac69778cea8ad102770beb05e48ee601ed485070c3b05ff3180 WHIRLPOOL 4ad96138f317e2348ca1c2615aaa11a7942808508c753f3393a65e977de49b652622f808023ccbbcab319e69f1c3870152ec033d2d4232f9b473cc22f6693c55
-EBUILD sigrok-cli-9999.ebuild 1124 SHA256 047ca828c17bacde46137a8ae07cd893d9e1d3b4d9a1fc8cc67349f277ee2b76 SHA512 f9f1ab1c4dbe90044fb44eced88a28862a581a1f14f8609d4b4dc6dfffc061a158f77ca75e4cc6a8772574c86b9717c685647e1cfd7bd91438213e4489c50ebb WHIRLPOOL 58a4b288fb45f7491a37b00c16374a326626da12c39a3576cb787490d522875bd6aa750d1d095cbd57fea5eaaf43b25427f80d7dfdb5954aa9b714733e8ffc69
-MISC ChangeLog 484 SHA256 2641a16cf4186ef5b17cda40656795fab6e5c5f131b0c3c24d246e2600d5e465 SHA512 a497748d7099113cdf653d27aea419112d23afac3ef4adb8e7064fca2ee707626fb2ea59b5e9b49748158dd7827db93d295fc265156ce19d52a15a2cdfb88635 WHIRLPOOL 83827617e1a4ffd7b9d5362b46a7a4eb1445498819388e15d55597c58d0c841b9a7a1500b257c9fe97aacadd47690d7cb3afa6d7f25b8dc2f2715650c5189392
+EBUILD sigrok-cli-0.5.0.ebuild 1123 SHA256 0250e80ee8e53815e048c5b5725aa3c5036a50baba3f5377205d2d66e0d0596d SHA512 eda4785b0c406521e59c3997f50630fd1b99f9d187b628774659cfe697dc5c3cca10204e2cdb3329acef0d27c9e28c982386dab010c5e278aeb332cece29dd31 WHIRLPOOL 7085591fb7f7dbfc362c41c0ada53cb18a9e9b4d4214e4cf1577c0d7c96052b8010b1fad01858350914b374056001d09d8aa01d39c0249ff6602fa25a02f2355
+EBUILD sigrok-cli-9999.ebuild 1122 SHA256 10b9f5787a99c5c65fc7f3124d85e6f1bff3fb1c2989e836105a1bc4bfa64324 SHA512 9357cc91592185cd981dbe9b1f9a573028cf7cee9d4787cd2a640151d685f5d5a907e16748f786dfb7d34554caba53d9934f13114d4ef125c71f57e0c6541617 WHIRLPOOL 8ffe29e0bd75dd36e47c5f2d292a7325e59347418a3550bc60c747a2a87d16d601badf132cdf5ce38ab52fcb4f88fe68511283b3f59f77e30798d04ace710c7a
+MISC ChangeLog 620 SHA256 7286026c4867b53aed53394495b8960fa4044c0fbece74238c705eabfe957666 SHA512 742423e36f1e9321e5247b6e9e4e037f77a08ab31871a297d6804a5c4de62227ffc2f90bd003a7a46a26df13eb7ea4fbeb4a4bb8cbb387b2939b5943861ffad3 WHIRLPOOL 1b72a54c59e85205ccb249a0f3afb33542ca5c7fef81e7133bc03d24f1d4552ada8c2627b59217a7f1908346b3d259d5285d00efad8f5053898ac841f9b10a52
 MISC metadata.xml 251 SHA256 99294108cd03281517a1a87e0ad62a4640440c36d11a6230ea51e5c545dfa271 SHA512 96a6975fa8e1a530fc5c296ef685d48b1f4ef5671ecc4ceb85b52752b7d36f3de4b60c98e9211c4ee20dcbadb159b37ea74d57f135dd61872c44427f813982f7 WHIRLPOOL e4409c93479cd092ddaebb2e18869a644ef4266ecd3a9d0ef1201ce6fc36cf1b75978f2c8819c053a2a45af906ed4841588a7f30d93d72810337561adc214ff2
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJTm+qTAAoJEPGu1DbS6WIAn1AP/2CAw8Qu2ViIiCfdJJVnp86q
-hSdWNZRswE1vjk2tkCtd+zTyqR3dTCdmEH3+yT+PRTdE4PVSp8ItWNzU2gF3eThz
-O20j50yRL0w7Li0HPPxO0aoSVA3wUrDedLPr6fRiw77gApLLjaW+C5cXCI8e181z
-cd9CFyY6tOGa9LphbA6VQ24R965lonorQjPBcZa7UeoU3doppE2oTnEPaOMx+Mdq
-jPl5blGCmtbzQej3FtfILzEEFxQ7VKqU7fJBp/Q37QwZ6iXRexaEb5G9cnc7Jg6T
-zYYYRlYA0zCqBTvBi8xD2TDZ1Wt4uA03anjH88DQqxWPc38BMMf2YGG9DjGXgjx9
-9il3FDSItjvArEX/49QuASjfGjVzeurS0/XKyTj8HqnKRs/nf4N9N+zxylsGfxff
-U5e1VV5+tr5TAd5YF3rPmhuX0VoVWIFgNh5hJ8C6Q0AC57RWTCWDlc31mKVXBcCg
-xqfstju41oAh2R/+bKhk/CttBbU9J2go0jke7V0bojruNmjf0l1OHmS7VgFCOdDU
-CpuGykZ2/M+SOpjs8LgXMqiyp8wP1x+ybf9P/Cxp3Mq3SQ5nRiSsl7853XWc5a/6
-oSP/sIyK/1Z/+RXTpcRQ3pel5u2rq6XtOuZ1vgA7zJSBl66Ah+TDv68r7vvnMnJf
-uMqMbdi0/pBeCP7hkLKv
-=iwuF
+iQJ8BAEBCABmBQJVJXGlXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOIAsP/RP+gTnLmYysTXKH3ms1GRJ8
+NAePnfS/9+vBJ2P0POG/bvazEb4jNKqO8+qKRMczUHRmANeaoal8jUY+uIysymmb
+R/tlVzMSIjb8aQXORqEGo5+b5mC/xm2LmXlQ1YhTVWLXGTE/3QijvcLO2kEcY+Eu
+PtEf7AmJLpV/JFlnqj2CwnXxEESAKMNo9NB3sgT3Nb6Sw5RaObohfljm8yilJBt2
+ooGJIteTnVrf6lLpkEErEyMwrKStxy/5mSl2pM2XKFHpbw5J+FEcwSfDpjWldidn
+H9VJ9Ozir8gqzOHm69S6FGYBjpE39o2YUG34HgwHKPWHOwFRl+gmS4R0AMZeajeO
+jamK4OS0C2vbpxAioRufd+HAF+gNejlThj/XyMkt9wXRNAbpRlUOX8o0fuFHrvDv
+HQeAk2y/YkKGIbTlcB42WkGb84CZ3UaRhEDKWiKcBGJzvNd3igg3ZH+ueTI1py1i
+oXDfAUfaDAfisKMoiyYPo4rgDbRHveh2AUbz6pi/ZTVU3JA/yMaKGD3AIxMjN0Xh
++J9aBYcCxl5QBT1/7gtF0mWDqrxE+0UN+qZTxK2OoAhrHlKB+qgFkiwOypQP5mxd
+Zgdf5hOAPGmp0PgOY4nQqNDXF4Qabi03UgMzAUYKNcoSahF3l0WXEoFYIStaRnaX
+CBSD7GbrVJqKxj2xJTMw
+=V2Bk
 -----END PGP SIGNATURE-----
