@@ -1,10 +1,10 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-electronics/sigrok-cli/sigrok-cli-9999.ebuild,v 1.1 2014/06/14 06:22:26 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-electronics/sigrok-cli/sigrok-cli-9999.ebuild,v 1.2 2015/04/08 18:21:21 mgorny Exp $
 
 EAPI="5"
 
-PYTHON_COMPAT=( python3_{2,3,4} )
+PYTHON_COMPAT=( python3_{3,4} )
 inherit eutils python-single-r1
 
 if [[ ${PV} == "9999" ]]; then
