@@ -1,6 +1,10 @@
 # ChangeLog for sci-electronics/sigrok-cli
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-electronics/sigrok-cli/ChangeLog,v 1.2 2014/06/14 06:24:10 vapier Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sci-electronics/sigrok-cli/ChangeLog,v 1.3 2015/04/08 18:21:21 mgorny Exp $
+
+  08 Apr 2015; Michał Górny <mgorny@gentoo.org> sigrok-cli-0.5.0.ebuild,
+  sigrok-cli-9999.ebuild:
+  Drop old Python implementations
 
 *sigrok-cli-9999 (14 Jun 2014)
 *sigrok-cli-0.5.0 (14 Jun 2014)
