@@ -1,6 +1,10 @@
 # ChangeLog for sci-electronics/pulseview
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-electronics/pulseview/ChangeLog,v 1.1 2014/06/14 07:02:49 vapier Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sci-electronics/pulseview/ChangeLog,v 1.2 2015/04/08 18:21:21 mgorny Exp $
+
+  08 Apr 2015; Michał Górny <mgorny@gentoo.org> pulseview-0.2.0.ebuild,
+  pulseview-9999.ebuild:
+  Drop old Python implementations
 
 *pulseview-9999 (14 Jun 2014)
 *pulseview-0.2.0 (14 Jun 2014)
